fix: Refactor landing assets to remove unused and duplicate files

--- a/public/assets/index/css/style.css
+++ b/public/assets/index/css/style.css
@@ -249,7 +249,7 @@ button {
 
 .main-layout {
      background-repeat: no-repeat;
-     background: url(../images/body_bg.png);
+     background: url(punlic/img/body_bg.png);
 }
 
 .loader_bg {
@@ -312,7 +312,7 @@ button {
 /*--------------------------------------------------------------------- layout new css ---------------------------------------------------------------------*/
 
 .head_top {
-     background: url(../images/banner.png);
+     background: url(/img/banner.png);
      background-size: 100% 100%;
      background-repeat: no-repeat;
      background-position: center;
@@ -487,7 +487,7 @@ button {
      width: 320px;
      height: 542px;
      right: 0;
-     background: url(../images/midil.png);
+     background: url(/img/midil.png);
      top: -210px;
 }
 
@@ -541,7 +541,7 @@ button {
 /** Testimonial section **/
 
 .Testimonial {
-     background: url(../images/test.png);
+     background: url(/img/test.png);
      background-repeat: no-repeat;
      margin-top: 90px;
      padding: 90px 0px;
@@ -825,7 +825,7 @@ ul.social_icon li a:hover {
      content: "";
      position: absolute;
      bottom: 61px;
-     background: url(../images/bottom.png);
+     background: url(/img/bottom.png);
      width: 290px;
      height: 292px;
      right: 0;
@@ -846,6 +846,6 @@ ul.social_icon li a:hover {
      color: #23262d;
 }
 
-
 /** end footer **/
+
 
